[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dominusnode-langchain"
version = "1.2.4"
description = "LangChain tools for Dominus Node rotating proxy service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.2.0",
    "dominusnode>=0.1.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["dominusnode_langchain"]
